--- a/management_app/app/views/courses/index.html.erb
+++ b/management_app/app/views/courses/index.html.erb
@@ -1,1 +1,6 @@
-<h1>home page</h1>
+<h1>COURSES LISTING</h1>
+<ul>
+	<li>CODE : IT101</li>
+	<li>name : computer</li>
+	<li>desc : a knowledege</li>
+</ul>
