--- a/management_app/app/views/layouts/application.html.erb
+++ b/management_app/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>ManagementApp</title>
+    <title>ONLINE MANAGEMENT</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -9,9 +9,54 @@
   </head>
 
   <body>
-  	<%= link_to 'home', root_path %>
-  	<%= link_to 'about', about_path %>
-  	<%= link_to 'new courses', courses_new_path %>
+  <header>
+     <nav>
+      <div class="container">
+    <div class="nav-wrapper">
+      <a href="#" class="brand-logo right">ONLINE MANAGEMENT</a>
+      <ul id="nav-mobile" class="left hide-on-med-and-down">
+        <li><a href="#">Courses</a></li>
+        <li><a href="#">Enrollments</a></li>
+        <li><a href="#">Accounts</a></li>
+      </ul>
+    </div>
+  </div>
+  </nav>
+  </header>
+  <main>
+    <div class="container">
     <%= yield %>
+  </div>
+  </main>
+  <footer>
+    
+        <footer class="page-footer">
+          <div class="container">
+            <div class="row">
+              <div class="col l6 s12">
+                <h5 class="white-text">Footer Content</h5>
+                <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+              </div>
+              <div class="col l4 offset-l2 s12">
+                <h5 class="white-text">Links</h5>
+                <ul>
+                  <li><a class="grey-text text-lighten-3" href="#!"><%= link_to 'home', root_path %></a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!"><%= link_to 'about', about_path %></a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!"><%= link_to 'new courses', courses_new_path %></a></li>
+                  
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="footer-copyright">
+            <div class="container">
+            © 2020 ONLINE MANAGEMENT SYSTEM
+            
+            </div>
+          </div>
+        </footer>
+            
+  </footer>
+    
   </body>
 </html>
