--- a/management_app/app/views/pages/about.html.erb
+++ b/management_app/app/views/pages/about.html.erb
@@ -1,1 +1,4 @@
 <h1> this is about page </h1>
+<%= link_to 'home', root_path %>
+  	<%= link_to 'about', about_path %>
+  	<%= link_to 'new courses', courses_new_path %>
