--- a/management_app/app/views/courses/index.html.erb
+++ b/management_app/app/views/courses/index.html.erb
@@ -1,6 +1,51 @@
-<h1>COURSES LISTING</h1>
-<ul>
-	<li>CODE : IT101</li>
-	<li>name : computer</li>
-	<li>desc : a knowledege</li>
-</ul>
+<div class="row">
+	<div class="col s12">
+		<h3 class="center-align">COURSES LISTING</h3>
+	</div>
+</div>
+
+  <div class="row">
+    <div class="col 6 m6">
+      <div class="card blue-grey darken-1">
+        <div class="card-content white-text">
+          <span class="card-title">IT101 : DBMS</span>
+          <p>desc : a knowledege</p>
+        </div>
+        <div class="card-action">
+          <a href="#">Enroll</a>
+          <a href="#">Info</a>
+        </div>
+      </div>
+    </div>
+  
+    <div class="col 6 m6">
+      <div class="card blue-grey darken-1">
+        <div class="card-content white-text">
+          <span class="card-title">IT101 : DBMS</span>
+          <p>desc : a knowledege</p>
+        </div>
+        <div class="card-action">
+          <a href="#">Enroll</a>
+          <a href="#">Info</a>
+        </div>
+      </div>
+    </div>
+  
+            
+
+    <div class="col 6 m6">
+      <div class="card blue-grey darken-1">
+        <div class="card-content white-text">
+          <span class="card-title">IT101 : DBMS</span>
+          <p>desc : a knowledege</p>
+        </div>
+        <div class="card-action">
+          <a href="#">Enroll</a>
+          <a href="#">Info</a>
+        </div>
+      </div>
+    </div>
+  </div>
+            
+
+
