added courses and student table in database

--- a/management_app/app/views/courses/index.html.erb
+++ b/management_app/app/views/courses/index.html.erb
@@ -4,12 +4,13 @@
 	</div>
 </div>
 
-  <div class="row">
-    <div class="col 6 m6">
+ <div class="row">
+  <% @courses.all.each do |course| %>
+    <div class="col s6 m6">
       <div class="card blue-grey darken-1">
         <div class="card-content white-text">
-          <span class="card-title">IT101 : DBMS</span>
-          <p>desc : a knowledege</p>
+          <span class="card-title"><%= course.short_name %>: <%= course.name %></span>
+          <p><%=course.description %></p>
         </div>
         <div class="card-action">
           <a href="#">Enroll</a>
@@ -18,33 +19,10 @@
       </div>
     </div>
   
-    <div class="col 6 m6">
-      <div class="card blue-grey darken-1">
-        <div class="card-content white-text">
-          <span class="card-title">IT101 : DBMS</span>
-          <p>desc : a knowledege</p>
-        </div>
-        <div class="card-action">
-          <a href="#">Enroll</a>
-          <a href="#">Info</a>
-        </div>
-      </div>
-    </div>
-  
+   
             
-
-    <div class="col 6 m6">
-      <div class="card blue-grey darken-1">
-        <div class="card-content white-text">
-          <span class="card-title">IT101 : DBMS</span>
-          <p>desc : a knowledege</p>
-        </div>
-        <div class="card-action">
-          <a href="#">Enroll</a>
-          <a href="#">Info</a>
-        </div>
-      </div>
-    </div>
+<% end %>
+    
   </div>
             
 
