--- a/management_app/app/views/pages/about.html.erb
+++ b/management_app/app/views/pages/about.html.erb
@@ -1,4 +1,5 @@
-<h1> this is about page </h1>
-<%= link_to 'home', root_path %>
-  	<%= link_to 'about', about_path %>
-  	<%= link_to 'new courses', courses_new_path %>
+<h1>  about website</h1>
+<p>It is a DBMS project which tells that the students enroll online courses
+
+* courses  will have short name ,name, description
+* the index page will have a listing of courses that are available</p>
