--- a/management_app/app/views/layouts/_navigation.html.erb
+++ b/management_app/app/views/layouts/_navigation.html.erb
@@ -31,5 +31,17 @@
     </div>
   </div>
   </nav>
-
+<% flash.each do |key, message| %>
+<div class="container">
+  <div class="row sign-up-form">
+    <div class="col s12 m12 l12">
+      <div class="card-panel red lighten-2" id="fade-out-target">
+        <span class="white-space">
+       <%= message %>
+        </span>
+      </div>
+    </div>
+  </div>
+</div>
+<% end %>
   </header>
