--- a/management_app/app/views/students/new.html.erb
+++ b/management_app/app/views/students/new.html.erb
@@ -1,51 +1,1 @@
-<% if @student.errors.any? %>
-<div class="container">
-	<div class="row sign-up-form">
-		<div class="col s12 m12 l12">
-			<div class="card-panel red lighten-2">
-				<span class="white-space">
-<strong><%= pluralize(@student.errors.count, "error")%></strong>
-prohibited your profile from being created
-<ul>
-	<% @student.errors.full_messages.each do |message| %>
-	<li><%= message %></li>
-		<% end %>
-	</ul>
-</span>
-</div>
-</div>
-</div>
-</div>
-
-	<% end %>
-
-<div class="container">
-	<div class="row center sign-up-form">
-		<div class="col s12 m12 l12">
-			<div class="card-panel">
-				 <h3 class="header"> Sign up!! </h3>
-<div class="row">
-<%= form_for(@student, html: {class: "cols12"}) do |f| %>
-<div class="row">
-	<div class="input-field col s12">
-	<%= f.label :name, placeholder: "Enter your full name ", autofocus: true %>
-	<%= f.text_field :name %>
-</div>
-</div>
-<div class="row">
-	<div class="input-field col s12">
-	<%= f.label :email, placeholder: "Enter your email address " %>
-	<%= f.email_field :email %>
-</div>
-</div>
-<div class="row">
-	<div class="input-field col s12">
-	<%= f.submit "sign up", class: "btn orange waves-effect waves-light right" %>
-</div>
-</div>
-	<% end %>
-</div>
-</div>
-</div>
-</div>
-</div>
+<%= render 'form' %>
