--- a/management_app/app/views/courses/index.html.erb
+++ b/management_app/app/views/courses/index.html.erb
@@ -1,10 +1,10 @@
 <div class="row">
-	<div class="col s12">
-		<h3 class="center-align">COURSES LISTING</h3>
-	</div>
+  <div class="col s12">
+<h3 class="center-align">Course Listing</h3>    
+  </div>
 </div>
 
- <div class="row">
+<div class="row">
   <% @courses.all.each do |course| %>
     <div class="col s6 m6">
       <div class="card blue-grey darken-1">
@@ -13,17 +13,16 @@
           <p><%=course.description %></p>
         </div>
         <div class="card-action">
-          <a href="#">Enroll</a>
+           <% if logged_in? && !(current_user.courses.include?(course)) %>
+            <%= link_to "Enroll", course_enroll_path(course_id: course.id), method: :post %>
+          <% end %>
           <a href="#">Info</a>
+
         </div>
       </div>
     </div>
   
-   
-            
 <% end %>
+  
     
   </div>
-            
-
-
