--- a/management_app/app/views/layouts/_navigation.html.erb
+++ b/management_app/app/views/layouts/_navigation.html.erb
@@ -5,7 +5,7 @@
      <li><%= link_to "Profile", student_path(current_user) %></li>
      <% end %>
      <li class="divider"></li>
-     <li><a href="#!">three</a></li>
+     <li><%= link_to 'about', about_path %></li>
   </ul>
   <ul id="dropdown2" class="dropdown-content">
      <li><%= session_link %></li>
